@@ -1,6 +1,7 @@
 contrasts <-
     function (x, contrasts = TRUE)
 {
+    if (is.logical(x)) x <- factor(x)
     if (!is.factor(x))
 	stop("contrasts apply only to factors")
     if(!contrasts)
@@ -19,6 +20,7 @@ contrasts <-
 "contrasts<-" <-
     function(x, how.many, value)
 {
+    if (is.logical(x)) x <- factor(x)
     if(!is.factor(x))
 	stop("contrasts apply only to factors")
     if(is.function(value)) value <- value(nlevels(x))
